Renamed context "keycap" to "msgset" due to Ticket#84 Enabled command value in keycap/msgset context
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@1683 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt/common/l10n/de.xml
+++ b/xslt/common/l10n/de.xml
@@ -128,10 +128,10 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
-      <!--       <l:template name="command" text=""/> -->
+      <l:template name="command" text="&#x2318;"/> 
       <l:template name="control" text="Strg"/>
       <l:template name="delete" text="Entf"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
