--- a/xslt/common/l10n/fi.xml
+++ b/xslt/common/l10n/fi.xml
@@ -143,10 +143,10 @@
    </l:context>
 
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
-<!--       <l:template name="command" text="???"/> -->
+      <l:template name="command" text="&#x2318;"/>
       <l:template name="control" text="Ctrl"/>
       <l:template name="delete" text="Del"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
