--- a/xslt/common/l10n/fr.xml
+++ b/xslt/common/l10n/fr.xml
@@ -129,7 +129,7 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
       <!--       <l:template name="command" text=""/> -->
