--- a/xslt/common/l10n/lt_lt.xml
+++ b/xslt/common/l10n/lt_lt.xml
@@ -133,10 +133,10 @@
       <l:template name="part" text="%t&#160;%n&#160;dalis"/>
    </l:context>
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&#9003;"/><!-- mdash -->
-<!--       <l:template name="command" text="???"/> -->
+      <l:template name="command" text="&#x2318;"/>
       <l:template name="control" text="Vald"/>
       <l:template name="delete" text="&#352;alinti"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
