--- a/xslt/common/l10n/no.xml
+++ b/xslt/common/l10n/no.xml
@@ -124,7 +124,7 @@
       <l:template name="part" text="Del&#160;%n&#160;%t"/>
    </l:context>
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
 <!--       <l:template name="command" text="???"/> -->
