--- a/xslt/common/l10n/zh_tw.xml
+++ b/xslt/common/l10n/zh_tw.xml
@@ -101,10 +101,10 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="keycap"><!-- FIXME: Chinese keyboard -->
+   <l:context name="msgset"><!-- FIXME: Chinese keyboard -->
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/><!-- mdash -->
-      <!--       <l:template name="command" text="???"/> -->
+      <l:template name="command" text="&#x2318;"/>
       <l:template name="control" text="Ctrl"/>
       <l:template name="delete" text="Del"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
