--- a/xslt/common/l10n/es.xml
+++ b/xslt/common/l10n/es.xml
@@ -149,10 +149,10 @@
       <l:template name="toc" text="%t"/>
    </l:context>
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
-      <!-- <l:template name="command" text=""/> -->
+      <l:template name="command" text="&#x2318;"/>
       <l:template name="control" text="Control"/>
       <l:template name="delete" text="Supr"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
