--- a/xslt/common/l10n/it.xml
+++ b/xslt/common/l10n/it.xml
@@ -139,10 +139,10 @@
       <l:template name="format" text="d.m.Y"/>
    </l:context>
 
-   <l:context name="keycap">
+   <l:context name="msgset">
       <l:template name="alt" text="Alt"/>
       <l:template name="backspace" text="&lt;&#x2014;"/>
-      <!--       <l:template name="command" text=""/> -->
+      <l:template name="command" text="&#x2318;"/>
       <l:template name="control" text="Ctrl"/>
       <l:template name="delete" text="Canc"/>
       <l:template name="down" text="&#x02193;"/><!-- darr -->
