Added also variable-list-{label,title} to styles context
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@1900 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt/common/l10n/en.xml
+++ b/xslt/common/l10n/en.xml
@@ -65,6 +65,8 @@
       <l:template name="procedure-title" text="%t"/>
       <l:template name="table-label" text="Table&#160;%n"/>
       <l:template name="table-title" text="%t"/>
+      <l:template name="variablelist-label" text=""/>
+      <l:template name="variablelist-title" text="%t"/>
    </l:context>
 
    <l:context name="xref">
