Added key Contributors; added : after \*-label
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@1935 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt/common/l10n/en.xml
+++ b/xslt/common/l10n/en.xml
@@ -7,6 +7,7 @@
    <l:gentext key="Authors"         text="Authors"/>
    <l:gentext key="TableofContents" text="Contents"/>
    <l:gentext key="ListofAuthors"   text="List of Authors"/>
+   <l:gentext key="Contributors"    text="Contributors"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; QUICK START CARD"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
@@ -57,13 +58,13 @@
    <l:context name="styles">
       <l:template name="person-name" text="first-last"/>
 
-      <l:template name="example-label" text="Example&#160;%n"/>
+      <l:template name="example-label" text="Example&#160;%n:"/>
       <l:template name="example-title" text="%t"/>
-      <l:template name="figure-label" text="Figure&#160;%n"/>
+      <l:template name="figure-label" text="Figure&#160;%n:"/>
       <l:template name="figure-title" text="%t"/>
-      <l:template name="procedure-label" text="Procedure&#160;%n"/>
+      <l:template name="procedure-label" text="Procedure&#160;%n:"/>
       <l:template name="procedure-title" text="%t"/>
-      <l:template name="table-label" text="Table&#160;%n"/>
+      <l:template name="table-label" text="Table&#160;%n:"/>
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
