Translate "Contributors" in a couple languages and add singular ("Contributor")
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@1950 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -7,6 +7,8 @@
    <l:gentext key="Authors"       text="Autoren"/>
    <l:gentext key="Index"         text="Index"/>
    <l:gentext key="index"         text="Index"/>
+   <l:gentext key="Contributor"     text="Mitwirkender"/>
+   <l:gentext key="Contributors"    text="Mitwirkende"/>
    <l:gentext key="admonseparator"  text=": "/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHNELLSTART"/>
