--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -7,6 +7,7 @@
    <l:gentext key="Authors"         text="Authors"/>
    <l:gentext key="TableofContents" text="Contents"/>
    <l:gentext key="ListofAuthors"   text="List of Authors"/>
+   <l:gentext key="Contributor"     text="Contributor"/>
    <l:gentext key="Contributors"    text="Contributors"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; QUICK START CARD"/>
