--- a/xslt_suse2/common/l10n/fr.xml
+++ b/xslt_suse2/common/l10n/fr.xml
@@ -4,11 +4,13 @@
         language="fr"
         english-language-name="French">
 
-   <l:gentext key="ListofAuthors" text="Auteurs "/>
-   <l:gentext key="Authors"       text="Auteurs "/>
+   <l:gentext key="ListofAuthors" text="Auteurs"/>
+   <l:gentext key="Authors"       text="Auteurs"/>
    <l:gentext key="NOTE" text="REMARQUE"/>
    <l:gentext key="Note" text="Remarque"/>
    <l:gentext key="note" text="Remarque"/>
+   <l:gentext key="Contributor"     text="Coopérateur"/>
+   <l:gentext key="Contributors"    text="Coopérateurs"/>
    <l:gentext key="admonseparator"  text=" : "/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; FICHE D&#xc9;MARRAGE RAPIDE"/>
