--- a/xslt_suse2/common/l10n/es.xml
+++ b/xslt_suse2/common/l10n/es.xml
@@ -7,6 +7,8 @@
 
    <l:gentext key="ListofAuthors" text="Autores"/>
    <l:gentext key="Authors"       text="Autores"/>
+   <l:gentext key="Contributor"     text="Coagente"/>
+   <l:gentext key="Contributors"    text="Coagentes"/>
    <l:gentext key="admonseparator"  text=": "/>
    
    <l:gentext key="FlyerQuickstart" 
