--- a/xslt_suse2/common/l10n/it.xml
+++ b/xslt_suse2/common/l10n/it.xml
@@ -6,6 +6,8 @@
 
    <l:gentext key="ListofAuthors" text="Autori"/>
    <l:gentext key="Authors"       text="Autori"/>
+   <l:gentext key="Contributor"   text="Contributore"/>
+   <l:gentext key="Contributors"  text="Contributori"/>   
    <l:gentext key="admonseparator"  text=": "/>
    
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHEDA INTRODUTTIVA "/>
