Added version information before article and book title TODO: need to add chapter, appendix, etc. titlepages as well
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@1990 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -16,6 +16,7 @@
 
    <l:gentext key="admonseparator"  text=": "/>
  
+   <l:gentext key="version.info" text="Applies to "/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
