Added {itemizedlist,orderedlist}-{label,title} for formal titles
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2051 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -70,6 +70,10 @@
       <l:template name="table-title" text="%t"/>
       <l:template name="variablelist-label" text=""/>
       <l:template name="variablelist-title" text="%t"/>
+      <l:template name="itemizedlist-label" text=""/>
+      <l:template name="itemizedlist-title" text="%t"/>
+      <l:template name="orderedlist-label" text=""/>
+      <l:template name="orderedlist-title" text="%t"/>
    </l:context>
 
    <l:context name="xref">
