--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -17,6 +17,8 @@
    <l:gentext key="admonseparator"  text=": "/>
  
    <l:gentext key="version.info" text="Applies to "/>
+   <l:gentext key="sharethispage" text="Share this page:"/>
+   <l:gentext key="printthispage" text="Print this page"/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
