Add sharing, printing and version.info to German l10n file
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2095 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -10,6 +10,9 @@
    <l:gentext key="Contributor"     text="Mitwirkender"/>
    <l:gentext key="Contributors"    text="Mitwirkende"/>
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="version.info"  text="Bezieht sich auf "/>
+   <l:gentext key="sharethispage"  text="Diese Seite teilen:"/>
+   <l:gentext key="printthispage"  text="Diese Seite drucken:"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHNELLSTART"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
