Update langauge files to include translated language names
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2186 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/cs.xml
+++ b/xslt_suse2/common/l10n/cs.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="cs" english-language-name="Czech">
 
-
+   <l:gentext key="LocalisedLanguageName" text="&#268;e&#353;tina"/>
    <l:gentext key="SeeAlso"         text="Viz tak&#233;"/>
    <l:gentext key="Authors"         text="Auto&#345;i"/>
    <l:gentext key="TableofContents" text="Obsah"/>
