--- a/xslt_suse2/common/l10n/da.xml
+++ b/xslt_suse2/common/l10n/da.xml
@@ -4,6 +4,7 @@
    english-language-name="Danish">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Dansk"/>
    <l:gentext key="SeeAlso"         text="Se ogs&#229;"/>
    <l:gentext key="Authors"         text="Forfattere"/>
    <l:gentext key="TableofContents" text="Indhold"/>
