--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -3,6 +3,7 @@
         language="de"
         english-language-name="German">
 
+   <l:gentext key="LocalisedLanguageName" text="Deutsch"/>
    <l:gentext key="ListofAuthors" text="Autorenliste"/>
    <l:gentext key="Authors"       text="Autoren"/>
    <l:gentext key="Index"         text="Index"/>
