--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -3,6 +3,7 @@
    language="en" 
    english-language-name="English">
 
+   <l:gentext key="LocalisedLanguageName" text="English"/>
    <l:gentext key="SeeAlso"         text="See also"/>
    <l:gentext key="Authors"         text="Authors"/>
    <l:gentext key="TableofContents" text="Contents"/>
