--- a/xslt_suse2/common/l10n/es.xml
+++ b/xslt_suse2/common/l10n/es.xml
@@ -4,7 +4,7 @@
         language="es"
         english-language-name="Spanish">
 
-
+   <l:gentext key="LocalisedLanguageName" text="Espa&#241;ol"/>
    <l:gentext key="ListofAuthors" text="Autores"/>
    <l:gentext key="Authors"       text="Autores"/>
    <l:gentext key="Contributor"     text="Coagente"/>
