--- a/xslt_suse2/common/l10n/fi.xml
+++ b/xslt_suse2/common/l10n/fi.xml
@@ -2,6 +2,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="fi" english-language-name="Finnish">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Suomi"/>
    <l:gentext key="SeeAlso"         text="Katso my&#246;s"/>
    <l:gentext key="Authors"         text="Tekij&#228;t"/>
    <l:gentext key="TableofContents" text="Sis&#228;lt&#246;"/>
