--- a/xslt_suse2/common/l10n/fr.xml
+++ b/xslt_suse2/common/l10n/fr.xml
@@ -4,6 +4,7 @@
         language="fr"
         english-language-name="French">
 
+   <l:gentext key="LocalisedLanguageName" text="Fran&#231;ais"/>
    <l:gentext key="ListofAuthors" text="Auteurs"/>
    <l:gentext key="Authors"       text="Auteurs"/>
    <l:gentext key="NOTE" text="REMARQUE"/>
