--- a/xslt_suse2/common/l10n/hu.xml
+++ b/xslt_suse2/common/l10n/hu.xml
@@ -4,6 +4,7 @@
   english-language-name="Hungarian">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Magyar"/>
    <l:gentext key="SeeAlso"         text="L&#225;sd m&#233;g"/>
    <l:gentext key="Authors"         text="Szerz&#337;k"/>
    <l:gentext key="TableofContents" text="Tartalomjegyz&#233;k"/>
