--- a/xslt_suse2/common/l10n/it.xml
+++ b/xslt_suse2/common/l10n/it.xml
@@ -4,6 +4,7 @@
         language="it"
         english-language-name="Italian">
 
+   <l:gentext key="LocalisedLanguageName" text="Italiano"/>
    <l:gentext key="ListofAuthors" text="Autori"/>
    <l:gentext key="Authors"       text="Autori"/>
    <l:gentext key="Contributor"   text="Contributore"/>
