--- a/xslt_suse2/common/l10n/ko.xml
+++ b/xslt_suse2/common/l10n/ko.xml
@@ -3,6 +3,7 @@
         language="ko"
         english-language-name="Korean">
 
+   <l:gentext key="LocalisedLanguageName" text="&#54620;&#44397;&#50612;"/>
    <l:gentext key="SeeAlso"         text="&#52280;&#51312;"/>
    <l:gentext key="Authors"         text="&#51089;&#49457;&#51088;"/>   
    <l:gentext key="TableofContents" text="&#47785;&#52264;"/>
