--- a/xslt_suse2/common/l10n/lt_lt.xml
+++ b/xslt_suse2/common/l10n/lt_lt.xml
@@ -3,6 +3,7 @@
    language="lt" 
    english-language-name="Lithuanian">
 
+   <l:gentext key="LocalisedLanguageName" text="Lietuvi&#371;"/>
    <l:gentext key="SeeAlso"         text="Dar žr."/>
    <l:gentext key="Authors"         text="Autoriai"/>
    <l:gentext key="TableofContents" text="Turinys"/>
