--- a/xslt_suse2/common/l10n/nl.xml
+++ b/xslt_suse2/common/l10n/nl.xml
@@ -2,6 +2,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="nl" english-language-name="Dutch">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Nederlands"/>
    <l:gentext key="SeeAlso"         text="Zie ook"/>
    <l:gentext key="Authors"         text="Auteurs"/>
    <l:gentext key="TableofContents" text="Inhoud"/>
