--- a/xslt_suse2/common/l10n/no.xml
+++ b/xslt_suse2/common/l10n/no.xml
@@ -2,6 +2,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="no" english-language-name="Norwegian">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Norsk"/>
    <l:gentext key="SeeAlso"         text="Se ogs&#229;"/>
    <l:gentext key="Authors"         text="Forfattere"/>
    <l:gentext key="TableofContents" text="Innhold"/>
