--- a/xslt_suse2/common/l10n/pl.xml
+++ b/xslt_suse2/common/l10n/pl.xml
@@ -2,6 +2,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" 
    language="pl" english-language-name="Polish">
 
+   <l:gentext key="LocalisedLanguageName" text="Polski"/>
    <l:gentext key="SeeAlso" text="Zobacz także"/>
    <l:gentext key="Authors" text="Autorzy"/>
    <l:gentext key="TableofContents" text="Spis treści"/>
