--- a/xslt_suse2/common/l10n/pt_br.xml
+++ b/xslt_suse2/common/l10n/pt_br.xml
@@ -3,6 +3,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="pt_br" english-language-name="Portuguese (Brazil)">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Portugu&#234;s (Brasil)"/>
    <l:gentext key="SeeAlso" text="Veja tamb&#233;m"/>
    <l:gentext key="TableofContents" text="Sum&#225;rio"/>
    <l:gentext key="ListofAuthors" text="Lista de Autores"/>
