--- a/xslt_suse2/common/l10n/ru.xml
+++ b/xslt_suse2/common/l10n/ru.xml
@@ -2,6 +2,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="ru" english-language-name="Russian">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Русский"/>
    <l:gentext key="SeeAlso"         text="Смотрите также"/>
    <l:gentext key="Authors"         text="Авторы"/>
    <l:gentext key="TableofContents" text="Содержание"/>
