--- a/xslt_suse2/common/l10n/sv.xml
+++ b/xslt_suse2/common/l10n/sv.xml
@@ -2,6 +2,7 @@
 <l:l10n xmlns:l="http://docbook.sourceforge.net/xmlns/l10n/1.0" language="sv" english-language-name="Swedish">
 
 
+   <l:gentext key="LocalisedLanguageName" text="Svenska"/>
    <l:gentext key="SeeAlso"         text="Se &#228;ven"/>
    <l:gentext key="Authors"         text="F&#246;rfattare"/>
    <l:gentext key="TabellofContents" text="Inneh&#229;ll"/>
