--- a/xslt_suse2/common/l10n/zh_cn.xml
+++ b/xslt_suse2/common/l10n/zh_cn.xml
@@ -3,6 +3,7 @@
         language="zh_cn"
         english-language-name="Chinese Simplified">
 
+   <l:gentext key="LocalisedLanguageName" text="&#20013;&#25991;(&#31616;&#20307;)"/>
    <l:gentext key="admonseparator"  text="&#65306;"/>
    <l:gentext key="ListofAuthors" text="&#20316;&#32773;&#21015;&#34920;"/>
    <l:gentext key="Authors" text="&#20316;&#32773;&#21015;&#34920;"/>
