--- a/xslt_suse2/common/l10n/zh_tw.xml
+++ b/xslt_suse2/common/l10n/zh_tw.xml
@@ -3,6 +3,7 @@
         language="zh_tw"
         english-language-name="Chinese (Traditional)">
 
+   <l:gentext key="LocalisedLanguageName" text="&#20013;&#25991;(&#32321;&#20307;)"/>
    <l:gentext key="ListofAuthors" text="&#x539f;&#x8457;&#x8005;&#x540d;&#x55ae;"/>
    <l:gentext key="Authors" text="&#x539f;&#x8457;&#x8005;&#x540d;&#x55ae;"/>
    <l:gentext key="admonseparator"  text="&#65306;"/>
