--- a/xslt_suse2/common/l10n/ja.xml
+++ b/xslt_suse2/common/l10n/ja.xml
@@ -3,6 +3,7 @@
         language="ja"
         english-language-name="Japanese">
 
+   <l:gentext key="LocalisedLanguageName" text="&#26085;&#26412;&#35486;"/>
    <l:gentext key="ListofAuthors" text="&#33879;&#32773;"/>
    <l:gentext key="TableofContents" text="&#30446;&#27425;"/>
    <l:gentext key="admonseparator"  text=": "/>
