XSLT_S2: Make new layout boilerplate localisable
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2279 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -11,9 +11,28 @@
    <l:gentext key="Contributor"     text="Mitwirkender"/>
    <l:gentext key="Contributors"    text="Mitwirkende"/>
    <l:gentext key="admonseparator"  text=": "/>
-   <l:gentext key="version.info"  text="Bezieht sich auf "/>
-   <l:gentext key="sharethispage"  text="Diese Seite teilen:"/>
-   <l:gentext key="printthispage"  text="Diese Seite drucken:"/>
+
+   <l:gentext key="selectlanguage" text="Wählen Sie eine Sprache"/>
+   <l:gentext key="selectformat" text="Wählen Sie ein Format"/>
+   <l:gentext key="formathtml" text="Webseiten"/>
+   <l:gentext key="formatsinglehtml" text="Einzelne Webseite"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Inhalt"/>
+   <l:gentext key="find" text="Suchen"/>
+   <l:gentext key="navigation" text="Navigation"/>
+   <l:gentext key="sharethispage" text="Diese Seite teilen: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-Mail"/>
+   <l:gentext key="printthispage" text="Diese Seite drucken"/>
+   <l:gentext key="susecareers" text="Jobs"/>
+   <l:gentext key="suselegal" text="Rechtliche Hinweise/Impressum"/>
+   <l:gentext key="suseabout" text="Über"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Bezieht sich auf"/>
+   <l:gentext key="totopofpage" text="Seitenanfang"/>
 
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHNELLSTART"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
