--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -16,11 +16,29 @@
    <l:gentext key="FlyerMadeby"  text="Created by SUSE&#x00AE; with XSL-FO"/>
 
    <l:gentext key="admonseparator"  text=": "/>
- 
-   <l:gentext key="version.info" text="Applies to "/>
-   <l:gentext key="sharethispage" text="Share this page: "/>
-   <l:gentext key="printthispage" text="Print this page"/>
 
+   <l:gentext key="selectlanguage" text="Select a Language"/>
+   <l:gentext key="selectformat" text="Select a Format"/>
+   <l:gentext key="formathtml" text="Web Pages"/>
+   <l:gentext key="formatsinglehtml" text="Single Web Page"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="E-Book (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Contents"/>
+   <l:gentext key="find" text="Find"/>
+   <l:gentext key="navigation" text="Navigation"/>
+   <l:gentext key="sharethispage" text="Share this page: "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="E-Mail"/>
+   <l:gentext key="printthispage" text="Print this page"/>
+   <l:gentext key="susecareers" text="Careers"/>
+   <l:gentext key="suselegal" text="Legal"/>
+   <l:gentext key="suseabout" text="About"/>
+   <l:gentext key="susecontact" text="Contact Us"/>
+   <l:gentext key="version.info" text="Applies to "/>
+   <l:gentext key="totopofpage" text="Top"/>
+   
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
@@ -34,7 +52,7 @@
    <l:gentext key="fop1.sans.font.family"
      text="FreeSans"/><!-- ,DejaVuSans,suse.sans -->
    <l:gentext key="fop1.monospace.font.family" text="FreeMono"/><!--,DejaVuSansMono,suse.mono-->
-  <l:gentext key="fop1.symbol.font.family" text="FreeSans"/><!--,Symbol,ZapfDingbats-->
+   <l:gentext key="fop1.symbol.font.family" text="FreeSans"/><!--,Symbol,ZapfDingbats-->
    <l:gentext key="fop1.callout.unicode.font" text="Dingbats"/>
    <!-- Pocket layout: -->
    <l:gentext key="fop1.pocket.body.font.family" text="LiberationSans,sansserif"/>
