XSLT_S2: Better worded Content Overview link
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2337 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -19,6 +19,7 @@
    <l:gentext key="formatpdf" text="PDF"/>
    <l:gentext key="formatepub" text="E-Book (EPUB)"/>
    <l:gentext key="contentsoverview" text="Inhalt"/>
+   <l:gentext key="showcontentsoverview" text="Inhalt anzeigen"/>
    <l:gentext key="find" text="Suchen"/>
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="sharethispage" text="Diese Seite teilen: "/>
