--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -24,6 +24,7 @@
    <l:gentext key="formatpdf" text="PDF"/>
    <l:gentext key="formatepub" text="E-Book (EPUB)"/>
    <l:gentext key="contentsoverview" text="Contents"/>
+   <l:gentext key="showcontentsoverview" text="Show Contents"/>
    <l:gentext key="find" text="Find"/>
    <l:gentext key="navigation" text="Navigation"/>
    <l:gentext key="sharethispage" text="Share this page: "/>
