Added the word "Question"/"question" to all language files (needed when linking to qandaentrys or questions elements)
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2606 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt/common/l10n/da.xml
+++ b/xslt/common/l10n/da.xml
@@ -23,6 +23,10 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
    
+  <l:gentext key="Question" text="Spørgsmål:"/>
+  <l:gentext key="question" text="Spørgsmål:"/>
+  
+   
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
