--- a/xslt/common/l10n/de.xml
+++ b/xslt/common/l10n/de.xml
@@ -23,6 +23,10 @@
    <l:dingbat key="endquote" text="&quot;"/>
 --> 
 
+  <l:gentext key="Question" text="Frage:"/>
+  <l:gentext key="question" text="Frage:"/>
+  
+
   <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
