--- a/xslt/common/l10n/fi.xml
+++ b/xslt/common/l10n/fi.xml
@@ -18,6 +18,9 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
 
+  <l:gentext key="Question" text="kysymys:"/>
+  <l:gentext key="question" text="kysymys:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
