--- a/xslt/common/l10n/hu.xml
+++ b/xslt/common/l10n/hu.xml
@@ -19,6 +19,9 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
 
+  <l:gentext key="Question" text="kérdés:"/>
+  <l:gentext key="question" text="kérdés:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
