--- a/xslt/common/l10n/it.xml
+++ b/xslt/common/l10n/it.xml
@@ -16,6 +16,8 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
 
+  <l:gentext key="Question" text="domanda:"/>
+  <l:gentext key="question" text="domanda:"/>
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
