--- a/xslt/common/l10n/ko.xml
+++ b/xslt/common/l10n/ko.xml
@@ -13,11 +13,13 @@
    <l:gentext key="FlyerMadeby"  text="SUSE&#x00AE; with XSL-FO&#50640;&#32;&#51032;&#54644;&#32;&#49373;&#49457;&#46120;"/>   
    
    <l:gentext key="admonseparator"  text=": "/>
-
    
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
+
+  <l:gentext key="Question" text="문제:"/>
+  <l:gentext key="question" text="문제:"/>
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
