--- a/xslt/common/l10n/lt_lt.xml
+++ b/xslt/common/l10n/lt_lt.xml
@@ -13,13 +13,15 @@
    <l:gentext key="FlyerMadeby"  text="Sukūrė SUSE&#x00AE; su XSL-FO"/>
 
    <l:gentext key="admonseparator"  text=": "/>
- 
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
    <l:dingbat key="startquote" text="&#8222;"/>
    <l:dingbat key="endquote" text="&#8220;"/>
+
+  <l:gentext key="Question" text="klausimas:"/>
+  <l:gentext key="question" text="klausimas:"/>
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
