--- a/xslt/common/l10n/nl.xml
+++ b/xslt/common/l10n/nl.xml
@@ -24,6 +24,8 @@
    <l:dingbat key="singlestartquote" text="&#34;" lang="nl"/>
    <l:dingbat key="singleendquote" text="&#34;" lang="nl"/>
 
+   <l:gentext key="Question" text="vraag:"/>
+   <l:gentext key="question" text="vraag:"/>
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
