--- a/xslt/common/l10n/ru.xml
+++ b/xslt/common/l10n/ru.xml
@@ -17,6 +17,9 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
 
+   <l:gentext key="Question" text="вопрос:"/>
+   <l:gentext key="question" text="вопрос:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
