--- a/xslt/common/l10n/zh_cn.xml
+++ b/xslt/common/l10n/zh_cn.xml
@@ -14,7 +14,10 @@
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
-   
+
+   <l:gentext key="Question" text="问题:"/>
+   <l:gentext key="question" text="问题:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
