--- a/xslt/common/l10n/zh_tw.xml
+++ b/xslt/common/l10n/zh_tw.xml
@@ -20,6 +20,9 @@
    <l:dingbat key="startquote" text="&#x300c;"/>
    <l:dingbat key="endquote" text="&#x300d;"/>
 
+   <l:gentext key="Question" text="問題:"/>
+   <l:gentext key="question" text="問題:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
