--- a/xslt/common/l10n/cs.xml
+++ b/xslt/common/l10n/cs.xml
@@ -17,6 +17,10 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
    
+  <l:gentext key="Question" text="Otázka:"/>
+  <l:gentext key="question" text="otázka:"/>
+  
+   
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
