--- a/xslt/common/l10n/en.xml
+++ b/xslt/common/l10n/en.xml
@@ -12,8 +12,11 @@
    <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; QUICK START CARD"/>
    <!-- FlyerCopyright: Moved to copyright_quick.xml -->
    <l:gentext key="FlyerMadeby"  text="Created by SUSE&#x00AE; with XSL-FO"/>
-
+   
    <l:gentext key="admonseparator"  text=": "/>
+ 
+   <l:gentext key="Question" text="Question:"/>
+   <l:gentext key="question" text="question:"/>
  
 
    <!-- In most cases, this has to be empty -->
