--- a/xslt/common/l10n/es.xml
+++ b/xslt/common/l10n/es.xml
@@ -21,6 +21,9 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
 
+  <l:gentext key="Question" text="Cuestión:"/>
+  <l:gentext key="question" text="cuestión:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
