--- a/xslt/common/l10n/ja.xml
+++ b/xslt/common/l10n/ja.xml
@@ -16,6 +16,9 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>   
  
+  <l:gentext key="Question" text="質問:"/>
+  <l:gentext key="question" text="質問:"/>
+  
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
    -->
