--- a/xslt/common/l10n/pt_br.xml
+++ b/xslt/common/l10n/pt_br.xml
@@ -16,6 +16,9 @@
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
 
+   <l:gentext key="Question" text="pergunta:"/>
+   <l:gentext key="question" text="pergunta:"/>
+
    <!-- WARNING: 
      Change the following lines only, if you know what you are doing!
    -->
