New FO: Whoops... callout number 9 should be allowed to exist.
git-svn-id: svn+ssh://svn.code.sf.net/p/daps/svn/trunk/daps@2741 2c1a2506-8097-4b87-b405-3e90b480097b

--- a/xslt_suse2/common/l10n/de.xml
+++ b/xslt_suse2/common/l10n/de.xml
@@ -11,9 +11,12 @@
    <l:gentext key="Contributor"     text="Mitwirkender"/>
    <l:gentext key="Contributors"    text="Mitwirkende"/>
    <l:gentext key="admonseparator"  text=": "/>
+   <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHNELLSTART"/>
+   <!-- FlyerCopyright: Moved to copyright_quick.xml -->
+   <l:gentext key="FlyerMadeby"  text="Erstellt von SUSE&#x00AE; mit XSL-FO"/>
 
-   <l:gentext key="selectlanguage" text="Wählen Sie eine Sprache"/>
-   <l:gentext key="selectformat" text="Wählen Sie ein Format"/>
+   <l:gentext key="selectlanguage" text="Sprache wählen"/>
+   <l:gentext key="selectformat" text="Format wählen"/>
    <l:gentext key="formathtml" text="Webseiten"/>
    <l:gentext key="formatsinglehtml" text="Einzelne Webseite"/>
    <l:gentext key="formatpdf" text="PDF"/>
@@ -35,9 +38,6 @@
    <l:gentext key="version.info" text="Bezieht sich auf"/>
    <l:gentext key="totopofpage" text="Seitenanfang"/>
 
-   <l:gentext key="FlyerQuickstart" text="NOVELL&#x00AE; SCHNELLSTART"/>
-   <!-- FlyerCopyright: Moved to copyright_quick.xml -->
-   <l:gentext key="FlyerMadeby"  text="Erstellt von SUSE&#x00AE; mit XSL-FO"/>
 
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
