--- a/xslt_suse2/common/l10n/en.xml
+++ b/xslt_suse2/common/l10n/en.xml
@@ -17,8 +17,8 @@
 
    <l:gentext key="admonseparator"  text=": "/>
 
-   <l:gentext key="selectlanguage" text="Select a Language"/>
-   <l:gentext key="selectformat" text="Select a Format"/>
+   <l:gentext key="selectlanguage" text="Select Language"/>
+   <l:gentext key="selectformat" text="Select Format"/>
    <l:gentext key="formathtml" text="Web Pages"/>
    <l:gentext key="formatsinglehtml" text="Single Web Page"/>
    <l:gentext key="formatpdf" text="PDF"/>
@@ -39,7 +39,8 @@
    <l:gentext key="susecontact" text="Contact Us"/>
    <l:gentext key="version.info" text="Applies to "/>
    <l:gentext key="totopofpage" text="Top"/>
-   
+
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
    <l:dingbat key="guimenuendquote" text=""/>
