--- a/xslt_suse2/common/l10n/fr.xml
+++ b/xslt_suse2/common/l10n/fr.xml
@@ -19,10 +19,33 @@
    <l:gentext key="FlyerMadeby"  text="Cr&#xe9;&#xe9; par SUSE&#x00AE; avec XSL-FO"/>
    <l:gentext key="hyphenation-push-character-count" text="4"/>
    <l:gentext key="hyphenation-remain-character-count" text="4"/>
-   
+
+   <l:gentext key="selectlanguage" text="Selectionner Langue"/>
+   <l:gentext key="selectformat" text="Selectionner Format"/>
+   <l:gentext key="formathtml" text="Site web"/>
+   <l:gentext key="formatsinglehtml" text="Seule page web"/>
+   <l:gentext key="formatpdf" text="PDF"/>
+   <l:gentext key="formatepub" text="Livre électionique (EPUB)"/>
+   <l:gentext key="contentsoverview" text="Sommaire"/>
+   <l:gentext key="showcontentsoverview" text="Afficher sommaire"/>
+   <l:gentext key="find" text="Chercher"/>
+   <l:gentext key="navigation" text="Navigation"/>
+   <l:gentext key="sharethispage" text="Recommender cette page : "/>
+   <l:gentext key="shareviafacebook" text="Facebook"/>
+   <l:gentext key="shareviagoogleplus" text="Google+"/>
+   <l:gentext key="shareviatwitter" text="Twitter"/>
+   <l:gentext key="shareviaemail" text="Courriel"/>
+   <l:gentext key="printthispage" text="Imprimer cette page"/>
+   <l:gentext key="susecareers" text="Carrières"/>
+   <l:gentext key="suselegal" text="Mentions légales"/>
+   <l:gentext key="suseabout" text="Infos"/>
+   <l:gentext key="susecontact" text="Contactez-nous"/>
+   <l:gentext key="version.info" text="Refere-se à "/>
+   <l:gentext key="totopofpage" text="Au début"/>
+
    <!-- In most cases, this has to be empty -->
    <l:dingbat key="guimenustartquote" text=""/>
-   <l:dingbat key="guimenuendquote" text=""/>   
+   <l:dingbat key="guimenuendquote" text=""/>
 
    <!-- WARNING: 
      Change the following lines only, if you know what you are do!
